Adjusted the applet size to match the size of the new drag and drop image